<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_orange_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_fav"
        android:icon="@drawable/ic_star_orange_24"
        android:title="@string/favorites"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_orange_24"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/language"
                android:title="@string/language"
                app:showAsAction="never" />
            <item
                android:id="@+id/reminder"
                android:title="@string/reminder_off"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>